--- a/style.css
+++ b/style.css
@@ -1,26 +1,36 @@
-body{
-    background-color: #ababab;
+* {
+  padding: 0;
+  margin: 0;
 }
-button{
-    background-color: #323232;
-    color: #efefef;
-    padding: 1rem;
-    width:  100%;
-    text-align: left;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+body {
+  background-color: #5f5b6b;
+  height: 100vh;
+  width: 100vw;
 }
-.active, button:hover{
-    background-color: #212121;
-    color: #efefef;
+.navbar {
+  display: inline-block;
+  background-color: #5f5b6b;
+  padding-left: 5rem;
+  width: 18%;
+  height: 100%;
+  border-right: 1px solid #000;
 }
-.vektorid{
-    margin-bottom: 1rem;
-    padding: 0 1rem;
-    font-size: 1.2rem;
-    display: none;
-    overflow: hidden;
-    background-color: #333;
-    color: #efefef;
+.navbar h1 {
+  font-size: 4vw;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-bottom: 3rem;
+  text-align: center;
+  color: #fff;
+}
+.navbar h1::first-letter {
+  color: #0f0;
+}
+.sisu {
+  float: right;
+  background-color: #323031;
+  width: 70%;
+  margin: 5% 5% 0 0;
+  padding: 0 0 22% 0;
+  border: 1rem solid #323031;
+  border-radius: 1vw;
 }
