--- a/style.css
+++ b/style.css
@@ -12,36 +12,39 @@ button {
   background-color: #415a77;
   color: #efefef;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  width: 100%;
-  font-size: 1.5rem;
+  font-size: 1.5vw;
   padding: 1vw 0 1vh 0;
 }
 .navTeema {
   transition: 0.1s;
 }
 .navAlaTeema {
+  width: 80%;
   padding: 0.25rem;
   margin-top: 0.5rem;
 }
 .navbar {
   background-color: #153155;
   padding-left: 3rem;
-  width: 100%;
-  height: 10%;
+  height: 10vh;
 }
 .navbar h1 {
   display: inline-block;
-  font-size: 4vw;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  text-shadow: 3px 3px #000;
   color: #fff;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 8vh;
+  -webkit-text-stroke: 1px black;
+  margin-right: 10%;
 }
 .navDB {
-  display: inline-block;
-  margin-left: 10%;
+  width: 65%;
+  display: inline-flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 .navB {
   display: inline-grid;
+  width: 24.5%;
 }
 .navB div {
   opacity: 0;
@@ -52,7 +55,6 @@ button {
   visibility: visible;
   height: auto;
   opacity: 1;
-  width: 85%;
   transform: translate3d(10%, 10%, 0);
   animation: fadeIn 1s ease;
 }
