--- a/stiil.css
+++ b/stiil.css
@@ -1,7 +1,5 @@
-body {background-color: rgb(41, 171, 207);}
-h1 {color: rgb(254, 255, 253);font-family: Sans MS, cursive, sans-serif;text-align: center; font-size: 60 ;}
-
 .kast {
+   
     margin: auto;
     width: 1320px;
     font-family: Sans MS, cursive, sans-serif;
@@ -25,28 +23,17 @@ div {
     
     margin: 0;
     position: absolute;
-    top: 20%;
+    top: 30%;
     left: 0.2%;
 
 }
 .btn {
     cursor: pointer;
-    background-color: rgb(89, 107, 112);
+    background-color: #415a77;
     width: 1325px;
     display: block;
     height: 70px;
     font-size: 20px; 
     font-family: Comic Sans MS, cursive, sans-serif;
-    
-  }
-  .tagasinupp{
-    position:relative;
-    left:1270px;
-    top:-90px;
-    size:small;
+}
 
-    }
-.pilt{
-    width: 50px;
-    height: 50px;
-}   
