--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 .sisu {
-  display: inline-block;
   color: #fff;
 }
 .image {
@@ -7,13 +6,17 @@
   z-index: -1;
   background: url("background2.png");
   background-size: cover;
-  opacity: 0.4;
+  opacity: 0.35;
   width: 100%;
   height: 100%;
 }
-.sisu h1 {
+.text {
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  padding: 12%;
   color: #fff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 5vh;
+  font-size: 3vh;
   -webkit-text-stroke: 0.6px black;
 }
