--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
 }
 body {
   background-color: #778da9;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   height: 100vh;
   width: 100vw;
 }
@@ -13,21 +12,22 @@ button {
   background-color: #415a77;
   color: #efefef;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 1.5vw;
+  font-size: 1.3vw;
   padding: 1vw 0 1vh 0;
 }
 .navTeema {
   transition: 0.1s;
 }
 .navAlaTeema {
-  width: 80%;
+  width: 100%;
   padding: 0.25rem;
   margin-top: 0.5rem;
 }
 .navbar {
+  display: flex;
+  align-items: center;
   background-color: #153155;
-  padding-left: 3rem;
-  height: 10vh;
+  padding: 1rem 0 1rem 3rem;
 }
 .navbar h1 {
   display: inline-block;
@@ -37,46 +37,62 @@ button {
   -webkit-text-stroke: 1px black;
   margin-right: 10%;
 }
+
 .navDB {
-  width: 65%;
+  width: 70%;
   display: inline-flex;
   align-items: flex-start;
   justify-content: space-between;
 }
 .navB {
   display: inline-grid;
-  width: 24.5%;
+  position: relative;
+  width: 19.5%;
 }
 .navB div {
   opacity: 0;
   height: 0;
   overflow: hidden;
+  position: absolute;
+  padding: 6% 6% 0 6%;
 }
 .navB:hover div {
   visibility: visible;
   height: auto;
   opacity: 1;
-  transform: translate3d(10%, 10%, 0);
-  animation: fadeIn 1s ease;
+  margin-top: 22%;
+  animation: fadeIn 0.8s ease;
 }
 .navB:hover .navTeema {
   border: #99bfea solid 3px;
   border-radius: 3px;
 }
+.navB .navTeema {
+  border: transparent solid 3px;
+  border-radius: 3px;
+}
+
+.navAlaTeema {
+  border: #5d7da1 solid 3px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
 .navAlaTeema:hover {
   background-color: #203853;
   border-radius: 3px;
 }
+
 /*
 https://stackoverflow.com/questions/3331353/transitions-on-the-css-display-property
 */
 @keyframes fadeIn {
   from {
     opacity: 0;
-    transform: translate3d(10%, 0, 0);
+    transform: translate3d(0, -15%, 0);
   }
   to {
     opacity: 1;
-    transform: translate3d(10%, 10%, 0);
+    transform: translate3d(0, 0, 0);
   }
 }
