--- a/style.css
+++ b/style.css
@@ -31,11 +31,14 @@ button {
 }
 .navbar h1 {
   display: inline-block;
-  color: #fff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 8vh;
   -webkit-text-stroke: 1px black;
   margin-right: 10%;
+}
+.navbar a {
+  color: #fff;
+  text-decoration: none;
 }
 
 .navDB {
